Fixed buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -66,8 +66,9 @@
   margin-left: 10vw;
 }
 #goodBad {
-  margin-top: -10px;
+  margin-top: -3px;
   margin-right: 10vw;
+  font-size: 20px;
 }
 
 #songName {
